<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_trending_movies_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trending_movies_now"
            android:textColor="@color/dark_text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_trending_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_duration="1000">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/home_shimmer" />

                <include layout="@layout/home_shimmer" />

                <include layout="@layout/home_shimmer" />

                <include layout="@layout/home_shimmer" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trending_movies_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingBottom="8dp"
            android:visibility="gone"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/movie_list_card"
            tools:orientation="horizontal" />

        <TextView
            android:id="@+id/tv_trending_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trending_tv_now"
            android:textColor="@color/dark_text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_trending_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_duration="1000">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/home_shimmer" />

                <include layout="@layout/home_shimmer" />

                <include layout="@layout/home_shimmer" />

                <include layout="@layout/home_shimmer" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trending_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/movie_list_card"
            tools:orientation="horizontal" />

        <TextView
            android:id="@+id/tv_most_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/most_popular_movies"
            android:textColor="@color/dark_text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_popular_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_duration="1000">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/home_shimmer" />

                <include layout="@layout/home_shimmer" />

                <include layout="@layout/home_shimmer" />

                <include layout="@layout/home_shimmer" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_most_popular_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/movie_list_card"
            tools:orientation="horizontal" />

        <TextView
            android:id="@+id/tv_most_popular_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/most_popular_tv_shows"
            android:textColor="@color/dark_text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_popular_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_duration="1000">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/home_shimmer" />

                <include layout="@layout/home_shimmer" />

                <include layout="@layout/home_shimmer" />

                <include layout="@layout/home_shimmer" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_most_popular_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/movie_list_card"
            tools:orientation="horizontal" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>