<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_coming_soon"
        android:icon="@drawable/ic_coming_soon"
        android:title="@string/coming_soon"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:showAsAction="always" />


</menu>